--- a/JCF Opdracht 3/src/jcf/opdracht/pkg3/JCFGUI.fxml
+++ b/JCF Opdracht 3/src/jcf/opdracht/pkg3/JCFGUI.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TreeView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<SplitPane dividerPositions="0.29797979797979796" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.65">
+<SplitPane dividerPositions="0.29797979797979796" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.65" fx:controller="jcf.opdracht.pkg3.JCFGUIController">
   <items>
     <AnchorPane fx:id="AnkerLinks" minHeight="0.0" minWidth="0.0" prefHeight="412.0" prefWidth="367.0">
          <children>
